[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chatgpt-importer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"